--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -3,3 +3,6 @@ source "http://rubygems.org"
 
 gem "sinatra", "= 1.3.2"
 gem "sinatra-reloader", "= 1.0"
+gem "rack-session-sequel", "= 0.0.1"
+gem "jdbc-mysql", "= 5.1.13"
+gem "json-jruby", "= 1.5.0"
