--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -6,3 +6,4 @@ gem "sinatra-reloader", "= 1.0"
 gem "rack-session-sequel", "= 0.0.1"
 gem "jdbc-mysql", "= 5.1.13"
 gem "json-jruby", "= 1.5.0"
+gem "bcrypt-ruby", "= 3.0.1"
