--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -7,3 +7,4 @@ gem "rack-session-sequel", "= 0.0.1"
 gem "jdbc-mysql", "= 5.1.13"
 gem "json-jruby", "= 1.5.0"
 gem "bcrypt-ruby", "= 3.0.1"
+gem "rspec", "2.10.0"
