pull in twitter-bootstrap-rails gem to replace less-rails-bootstrap, as it better allows for bootstrap overrides;

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -20,7 +20,7 @@ group :assets do
 
   gem 'uglifier', '>= 1.0.3'
   
-  gem 'less-rails-bootstrap'
+  gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
 end
 
 gem 'jquery-rails'
