A first shot at some sort of JSON-schema based model

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -27,6 +27,8 @@ gem 'jquery-rails'
 
 gem 'formtastic'
 
+gem 'json-schema'
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
