introduce custom formhelper to render bootstrap formatted form elements and errors; add I18n for existing forms;

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -25,9 +25,9 @@ end
 
 gem 'jquery-rails'
 
-gem 'formtastic'
-
 gem 'json-schema'
+
+gem 'markaby'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
