remove twitter-bootstrap-rails gem and add bootstrap js/css into vendor/assets

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -19,8 +19,8 @@ group :assets do
   gem 'therubyrhino'
 
   gem 'uglifier', '>= 1.0.3'
-  
-  gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
+
+  gem 'less-rails'
 end
 
 gem 'jquery-rails'
