removing my authorship from the footer

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ pygments: true
 title : ArchivesSpaceDev
 tagline: The final frontier
 author :
-  name : Brian Hoffman
+  name : ASpace
   email : brianjhoffman@gmail.com
   github : lcdhoffman
 
