--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -10,4 +10,5 @@ gem "json-jruby", "= 1.5.0"
 gem "bcrypt-ruby", "= 3.0.1"
 gem "rspec", "2.10.0"
 gem "json-schema"
+gem "simplecov"
 gem "warbler"
