--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -5,17 +5,17 @@ source:
   format: "xml"
   schema: "ead"
 entities:
-  collection: 
-    instance: ["ead"]
-    properties:
-      id_0: ["unitid"]
-      title: ["unittitle"]
+  resource: 
+     instance: ["ead"]
+     properties:
+       id_0: ["unitid"]
+       title: ["unittitle"]
   archival_object: 
     instance: ["//c", "//c01", "//c02", "//c03", "//c04", "//c05", "//c06", "//c07", "//c08", "//c09", "//c10", "//c11", "//c12"]
     properties:
       title: ["unittitle"]
       ref_id: ["@id"]
       parent: ["parent::c"]
-      subject: ["child::subject"]
+#      subject: ["child::subject"]
 #  subject: ["//subject"]
 
