--- a/frontend/Rakefile
+++ b/frontend/Rakefile
@@ -4,4 +4,6 @@
 
 require File.expand_path('../config/application', __FILE__)
 
+ENV['DISABLE_STARTUP'] = 'true'
+
 ArchivesSpace::Application.load_tasks
