first draft of an import route in rails

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -47,3 +47,13 @@ gem 'warbler'
 # gem 'debugger'
 
 gem 'atomic'
+
+# Importing requirements
+
+gem 'nokogiri'
+
+# For queuing batch import jobs
+
+#gem 'delayed_job_active_record'
+
+
