--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -11,4 +11,5 @@ gem "bcrypt-ruby", "= 3.0.1"
 gem "rspec", "2.10.0"
 gem "json-schema"
 gem "simplecov"
+gem "jruby-jars", "= 1.7.0.rc2"
 gem "warbler"
