--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -10,7 +10,7 @@ entities:
     properties:
       id_0: 
         xpath: ["descendant::unitid"]
-        procedure: "|value| value.sub!(/_.*/, '')"
+        procedure: "|value| value.sub(/_.*/, '')"
 
       title: 
         xpath: ["descendant::unittitle"]
