--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 
 
+branches:
+  except:
+    - gh-pages
+
 script:
   - build/run bootstrap
   - build/run backend:test
