--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -11,7 +11,7 @@ gem "bcrypt-ruby", "= 3.0.1"
 gem "rspec", "2.10.0"
 gem "json-schema"
 gem "simplecov"
-gem "jruby-jars", "= 1.7.0.rc2"
+gem "jruby-jars", "= 1.7.0"
 gem "warbler"
 gem "nokogiri"
 gem "factory_girl"
