--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -6,7 +6,7 @@ gem "sinatra-reloader", "= 1.0"
 gem "rack-session-sequel", "= 0.0.1"
 gem "jdbc-mysql", "= 5.1.13"
 gem "jdbc-derby", "= 10.6.2.1"
-gem "json-jruby", "= 1.5.0"
+gem "json"
 gem "bcrypt-ruby", "= 3.0.1"
 gem "rspec", "2.10.0"
 gem "json-schema"
