--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -33,9 +33,13 @@ entities:
         procedure: "|value| value = nil unless value.include?('/'); value"
         
       extents:
-        xpath: ["descendant::extent"]
+        xpath: ["child::*/child::*/child::*/child::extent"]
         default: "5 or so"
         procedure: "|value| {'portion' => 'whole', 'number' => value, 'extent_type' => 'reels'}"
+      
+      dates:
+        xpath: ["child::*/child::*/child::*/child::unitdate"]
+        procedure: "|value| {'date_type' => 'expression', 'expression' => value}"
         
   archival_object: 
     xpath: ["//c", "//c01", "//c02", "//c03", "//c04", "//c05", "//c06", "//c07", "//c08", "//c09", "//c10", "//c11", "//c12"]
