--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,14 +1,14 @@
 # A sample Gemfile
 source "http://rubygems.org"
 
-gem "sinatra", "= 1.3.2"
-gem "sinatra-reloader", "= 1.0"
-gem "rack-session-sequel", "= 0.0.1"
-gem "jdbc-mysql", "= 5.1.13"
-gem "jdbc-derby", "= 10.6.2.1"
+gem "sinatra"
+gem "sinatra-reloader"
+gem "rack-session-sequel"
+gem "jdbc-mysql"
+gem "jdbc-derby"
 gem "json"
-gem "bcrypt-ruby", "= 3.0.1"
-gem "rspec", "2.10.0"
+gem "bcrypt-ruby"
+gem "rspec"
 gem "json-schema"
 gem "simplecov"
 gem "jruby-jars", "= 1.7.0"
