changed default level to 'item'

--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -110,7 +110,7 @@ entities:
 
       level:
         xpath: ["@level"]
-        default: "otherlevel"
+        default: "item"
         
       linked_agents:
         xpath: ["child::*/child::*/child::persname", "child::*/child::*/child::corpname"]
