imported notes get attached to (only) 1 resource or archival_object

--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -115,6 +115,9 @@ entities:
       linked_agents:
         xpath: ["child::*/child::*/child::persname", "child::*/child::*/child::corpname"]
         procedure: "|val| {'role' => 'subject', 'ref' => val.uri}" #val is a json object (agent)
+      
+      notes:
+        axis: "descendant"
         
       parent: 
         axis: "parent"
