Change agent person name 'direct_order' to 'name_order' with options 'direct' and 'inverted'

--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -166,7 +166,7 @@ entities:
       
       names:
         xpath: ["self"]
-        procedure: "|value| {'rules' => 'local', 'primary_name' => value, 'sort_name' => value, 'direct_order' => 'standard'}"
+        procedure: "|value| {'rules' => 'local', 'primary_name' => value, 'sort_name' => value, 'name_order' => 'direct'}"
 
   agent_corporate_entity:
     xpath: ["//corpname"]
