Add ability to view a repository and setup routes to include the repo_code;

--- a/public/Gemfile
+++ b/public/Gemfile
@@ -23,6 +23,8 @@ gem 'jquery-rails'
 
 gem 'json-schema'
 
+gem 'atomic'
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
