WIP trying to get the public interface added to the dist build process

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -1,13 +1,14 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.2.6'
+gem "rack", '1.4.4'
+gem 'rails', '3.2.11'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'activerecord-jdbcsqlite3-adapter'
 
-gem 'jruby-openssl'
+gem 'jruby-openssl', :require => false
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -25,7 +26,7 @@ end
 
 gem 'jquery-rails'
 
-gem 'json-schema'
+gem 'json-schema', '1.0.12'
 
 gem 'markaby'
 
