--- a/public/Gemfile
+++ b/public/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+gem "rack", '1.4.4'
 gem 'rails', '3.2.11'
 
 # Bundle edge Rails instead:
@@ -21,7 +22,7 @@ end
 
 gem 'jquery-rails'
 
-gem 'json-schema'
+gem 'json-schema', '1.0.12'
 
 gem 'atomic'
 
