--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -1,14 +1,13 @@
 source 'http://rubygems.org'
 
-gem "rack", '1.4.4'
-gem 'rails', '3.2.11'
+gem 'rails', '3.2.6'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'activerecord-jdbcsqlite3-adapter'
 
-gem 'jruby-openssl', :require => false
+gem 'jruby-openssl'
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -26,7 +25,7 @@ end
 
 gem 'jquery-rails'
 
-gem 'json-schema', '1.0.12'
+gem 'json-schema'
 
 gem 'markaby'
 
