--- a/migrations/crosswalks/ead.yml
+++ b/migrations/crosswalks/ead.yml
@@ -156,7 +156,9 @@ entities:
     properties:
       terms: 
         xpath: ["self"]
-        procedure: "|value| {'term' => value, 'term_type' => 'Cultural context'}"
+        procedure: "|value| {'term' => value, 'term_type' => 'Cultural context', 'vocabulary' => '/vocabularies/1'}"
+      vocabulary:
+        default: "/vocabularies/1"
         
   agent_person:
     xpath: ["//persname"]
