--- a/public/Gemfile
+++ b/public/Gemfile
@@ -6,6 +6,7 @@ group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
 
+  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   gem 'therubyrhino'
 
   gem 'uglifier', '>= 1.0.3'
@@ -16,5 +17,7 @@ end
 gem 'jquery-rails'
 
 gem 'json-schema', '1.0.10'
+
+gem "jruby-jars", "= 1.7.0"
 
 gem 'atomic'
