Have the backend:devserver write all its files to build/, ignoring the values specified in config.rb.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ selenium/webdriver-profile*
 /archivesspace.jar
 build/target
 build/solr
+build/solr_index
+build/indexer_state
+build/archivesspace_demo_db
 build/*.tmp
 backend/tests/ladle-server*
 /migrations/examples/csv/accessions-sample.csv
