updated note type strings in exporters, added a test

--- a/migrations/crosswalks/marcxml.yml
+++ b/migrations/crosswalks/marcxml.yml
@@ -166,7 +166,7 @@ entities:
         xpath: ["self"]
   
       type:
-        default: Biographical / Historical
+        default: bioghist
     
   otherfindaid:
     record_type: note_multipart
