--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -18,7 +18,9 @@ gem "nokogiri"
 gem "factory_girl"
 gem "rufus-scheduler"
 gem "net-ldap"
+
 gem "axlsx"
+gem "flying_saucer"
 
 group :test do
   gem "ladle"
