Add support for INTEGRATION_LOGFILE logging.  Modify Travis to use it

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ jdk:
   - oraclejdk7
   - openjdk6
 
+env: INTEGRATION_LOGFILE=/var/tmp/aspace-integration.log
+
+
 before_script:
   # http://about.travis-ci.org/docs/user/gui-and-headless-browsers/
   - "export DISPLAY=:99.0"
@@ -31,6 +34,9 @@ script:
 # - build/run common:test  # https://github.com/hudmol/archivesspace/commit/193fe9a3990da74e37e98140c9eaa264ec801643#L0R106
   - build/run selenium:test
   - WITH_NODEJS=1 build/run dist
+
+after_failure:
+  - cat /var/tmp/aspace-integration.log
 
 notifications:
   irc: "irc.freenode.org#archivesspace"
