--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   - WITH_NODEJS=1 build/run dist
 
 after_failure:
-  - cat /var/tmp/aspace-integration.log
+  - curl -H 'Content-Type: application/octet-stream' --data-binary '@/var/tmp/aspace-integration.log' 'http://aspace.hudmol.com/cgi-bin/store.cgi'
 
 notifications:
   irc: "irc.freenode.org#archivesspace"
