Set SCREENSHOT_ON_ERROR in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - build/run backend:test
   - build/run backend:integration
 # - build/run common:test  # https://github.com/hudmol/archivesspace/commit/193fe9a3990da74e37e98140c9eaa264ec801643#L0R106
-  - build/run selenium:test
+  - SCREENSHOT_ON_ERROR=1 build/run selenium:test
   - WITH_NODEJS=1 build/run dist
 
 after_failure:
